# enterprise-knowledge-brain

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: api_agent.py  graphrag_agent.py  planner_agent.py  prompts.py  report_agent.py  sql_agent.py  web_researcher_agent.py
api/: routes.py
core/: config.py  logger.py  registry.py
evaluation/: evaluator.py
graphrag/: __init__.py  graph_search.py  indexer.py  prompts.py
mcp_servers/: api_server.py  data_analysis_server.py  graphrag_server.py  sql_server.py  web_search_server.py
scripts/: run_eval.py
tests/: conftest.py  test_graphrag_agent.py  test_indexer.py  test_sql_api_agents.py  test_web_agent.py
tools/: internal_apis.py  python_sandbox.py  sql_executor.py  web_tools.py
utils/: event_publisher.py  pdf_exporter.py  redis_client.py  semantic_cache.py
